--- a/tests/libs/scotch/tests/Makefile.am
+++ b/tests/libs/scotch/tests/Makefile.am
@@ -1,12 +1,25 @@
 TESTS_ENVIRONMENT = BATS_NO_SUMMARY=1
+CLEANFILES        = res out
+TESTS             = ohpc-scotch-kick-test.sh
+check_PROGRAMS    = test_common_random	\
+	             test_common_thread	\
+	             test_strat_seq	\
+	             test_scotch_graph_coarsen	\
+	             test_scotch_graph_coarsen_build	\
+	             test_scotch_graph_part_ovl	\
+	             test_scotch_graph_color	\
+	             test_scotch_graph_map	\
+		      test_scotch_graph_order 
 
-check_PROGRAMS          = graph_map
-graph_map_SOURCES       = test_scotch_graph_map.c
+dist_noinst_DATA  = $(TESTS)
 
-TESTS                   = strat_seq
-check_PROGRAMS         += strat_seq
-strat_seq_SOURCES       = test_strat_seq.c
-
-TESTS                  += test_module
-TESTS                  += rm_execution
+test_common_random_SOURCES              = test_common_random.c
+test_common_thread_SOURCES              = test_common_thread.c
+test_strat_seq_SOURCES                  = test_strat_seq.c
+test_scotch_graph_coarsen_SOURCES       = test_scotch_graph_coarsen.c
+test_scotch_graph_coarsen_build_SOURCES = test_scotch_graph_coarsen_build.c
+test_scotch_graph_part_ovl_SOURCES      = test_scotch_graph_part_ovl.c
+test_scotch_graph_color_SOURCES         = test_scotch_graph_color.c
+test_scotch_graph_map_SOURCES           = test_scotch_graph_map.c
+test_scotch_graph_order_SOURCES         = test_scotch_graph_order.c
 
